num_enum/tests/try_build/compile_fail/garbage_attributes.stderr
error: Invalid attribute: expected `default` or `alternatives`
 --> $DIR/garbage_attributes.rs:6:5
  |
6 |     One = 1,
  |     ^^^
